# ollama_ex

./: LICENSE  README.md  main.ipynb  main.py  pyproject.toml
