[project]
name = "ollama-ex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-ollama==0.3.3",
    "litellm==1.72.4",
    "ollama==0.5.1",
    "openai==1.86.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
